syntax = "proto3";

package config_proto;

option go_package = "github.com/KonstantinGasser/datalab/service.app.config.agent/cmd/grpcserver/proto";

import "common/common.proto";

service AppConfiguration {
    rpc Initialize(InitRequest) returns (InitResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}

    rpc AppendPermission(AppendPermissionRequest) returns (AppendPermissionResponse) {}
    rpc RollbackAppendPermission(RollbackAppendPermissionRequest) returns (RollbackAppendPermissionResponse) {}

    rpc LockConfig(LockConfigRequest) returns (LockConfigResponse) {}
    rpc UnlockConfig(UnlockConfigRequest) returns (UnlockConfigResponse) {}

    rpc GetForClient(GetForClientRequest) returns (GetForClientResponse) {}
}

message GetForClientRequest {
    string app_uuid = 1;
}
message GetForClientResponse {
    int32 status_code = 1;
    string msg = 2;
    ClientConfig  config = 3;
}
message ClientConfig {
    repeated ClientStage stages = 1;
    repeated ClientBtnDef btn_defs = 2;
}

message ClientStage {
    int32 id = 1;
    int32 type = 2;
    string transition = 3;
    string regex = 4;
}

message ClientBtnDef {
    int32 id = 1;
    string name = 2;
}

message AppendPermissionRequest {
    string tracing_ID = 1;
    string app_uuid = 2;
    string user_uuid = 3;
}
message AppendPermissionResponse {
    int32 status_code = 1;
    string msg = 2;
}

message RollbackAppendPermissionRequest {
    string tracing_ID = 1;
    string app_uuid = 2;
    string user_uuid = 3;
}
message RollbackAppendPermissionResponse {
    int32 status_code = 1;
    string msg = 2;
}

message InitRequest {
    string tracing_ID = 1;
    string app_ref_uuid = 2;
    string app_owner = 3;
    bool is_private = 4;
    string owner_orgn = 5;
}
message InitResponse {
    int32 status_code = 1;
    string msg = 2;
}

message LockConfigRequest {
    string tracing_ID = 1;
    string app_ref_uuid = 2;
    common.AuthedUser authed_user = 3;
}
message LockConfigResponse {
    int32 status_code = 1;
    string msg = 2;
}
message UnlockConfigRequest {
    string tracing_ID = 1;
    string app_ref_uuid = 2;
    common.AuthedUser authed_user = 3;
}
message UnlockConfigResponse {
    int32 status_code = 1;
    string msg = 2;
}

message GetRequest {
    string tracing_ID = 1;
    common.AuthedUser authed_user = 2;
    string app_uuid = 3;

}
message GetResponse {
    int32 status_code = 1;
    string msg = 2;
    common.AppConfigurations configs = 3;
}

message UpdateRequest {
    string tracing_ID = 1;
    common.AuthedUser authed_user = 2;
    string app_ref_uuid =  3;
    string update_flag = 4;
    repeated common.Stage stages = 5;
    repeated common.Record records = 6;
    repeated common.BtnDef btn_defs = 7;
}
message UpdateResponse {
    int32 status_code = 1;
    string msg = 2;
}
